--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Discord bot for handling inventory in DnD campaigns.",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "M. Moojig Battsogt",
