--- a/package.json
+++ b/package.json
@@ -8,12 +8,18 @@
     "npm": "6.12.0"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node indexnew.js",
+    "test": "jest"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/moojigc/DiscordBot.git"
   },
   "author": "M. Moojig Battsogt",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^12.1.1",
-    "moment": "^2.24.0"
+    "discord.js": "^12.0.2",
+    "moment": "^2.24.0",
+    "mongodb": "^3.5.5"
   }
 }
