All commands programmed. Mainly need to fix small bugs in remove, add and overwrite commands

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
-/config.json
 /node_modules
 /test.js
 /nodemon
 /3monitors.code-workspace
 /nodemon.json
+/private.json
+/index_old.js
+/utils/logger.js
