--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "discordbot",
-  "version": "1.0.0",
+  "name": "dnd-inventory-discord-bot",
+  "version": "1.1.0",
   "description": "A Discord bot for handling inventory in DnD campaigns.",
   "main": "index.js",
   "engines": {
@@ -8,7 +8,7 @@
     "npm": "6.12.0"
   },
   "scripts": {
-    "start": "node indexnew.js",
+    "start": "node index.js",
     "test": "jest"
   },
   "repository": {
@@ -21,5 +21,16 @@
     "discord.js": "^12.0.2",
     "moment": "^2.24.0",
     "mongodb": "^3.5.5"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/moojigc/DiscordBot/issues"
+  },
+  "homepage": "https://github.com/moojigc/DiscordBot#readme",
+  "devDependencies": {},
+  "keywords": [
+    "dnd",
+    "inventory",
+    "discord",
+    "bot"
+  ]
 }
