--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "discord.js": "^12.0.2",
     "moment": "^2.24.0",
-    "mongodb": "^3.5.5"
+    "mongodb": "^3.5.5",
+    "rand-token": "^1.0.1"
   },
   "bugs": {
     "url": "https://github.com/moojigc/DiscordBot/issues"
