--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "start": "node index.js",
-    "test": "jest"
+    "test": "jest",
+    "open": "code . & nodemon"
   },
   "repository": {
     "type": "git",
@@ -20,7 +21,7 @@
   "dependencies": {
     "discord.js": "^12.0.2",
     "moment": "^2.24.0",
-    "mongodb": "^3.5.5",
+    "mongoose": "^5.9.18",
     "rand-token": "^1.0.1"
   },
   "bugs": {
