--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dnd-inventory-discord-bot",
+  "name": "intellidnd",
   "version": "1.1.0",
   "description": "A Discord bot for handling inventory in DnD campaigns.",
   "main": "bot.js",
