--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "npm": "6.12.0"
   },
   "scripts": {
+    "sass": "ts-node client/src/assets/scss/variable_compiler.ts",
+    "sass:watch": "nodemon --exec ts-node client/src/assets/scss/variable_compiler.ts --watch client/src/App.scss",
     "install": "cd client && npm install",
     "client": "cd client && npm start",
     "server": "ts-node-dev --project ./tsconfig.server.json --respawn server/src/index.ts",
-    "open": "code . & npm run watch",
-    "start": "concurrently \"npm run server\" \"npm run client\"",
+    "open": "code . & npm run start",
+    "start": "npm run sass && concurrently \"npm run server\" \"npm run client\" \"npm run sass:watch\"",
     "bot": "ts-node-dev bot/src",
     "build": "tsc --project ./tsconfig.server.json server/src && tsc --project ./tsconfig.bot.json bot/src && cd client && npm run build",
     "test": "jest"
