--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -1,5 +1,5 @@
 {
     "extends": "./tsconfig.base.json",
-    "include": ["backend/src/*"],
-    "outFile": "/backend/build/index.js"
+    "include": ["server/src/*"],
+    "outFile": "./server/build/index.js"
 }
