--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -16,9 +16,10 @@
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react"
+    "jsx": "react",
+    "isolatedModules": true,
+    "noUnusedLocals": false
   },
   "include": [
     "src"
