--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "sass:watch": "nodemon --exec ts-node client/src/assets/scss/variable_compiler.ts --watch client/App.scss",
     "install": "cd client && npm install",
     "client": "cd client && npm start",
-    "server": "ts-node-dev --project ./tsconfig.server.json --respawn server/index.ts",
+    "server": "nodemon --exec ts-node --project ./tsconfig.server.json server/index.ts --watch server -e *.ts",
     "open": "code . & npm run start",
     "start": "npm run sass && concurrently \"npm run server\" \"npm run client\" \"npm run sass:watch\"",
     "bot": "concurrently \"tsc -w\" \"nodemon bot/build/index.js\"",
@@ -20,7 +20,8 @@
     "build-bot": "tsc --project ./tsconfig.bot.json",
     "copy": "cp -r bot/* ../temp/intellidnd-bot/bot",
     "cleanup": "find . -name \"*.js\" -type f -delete",
-    "test": "echo 'No test' && exit 1"
+    "test": "echo 'No test' && exit 1",
+    "start:prod": "node build/server/index.js"
   },
   "repository": {
     "type": "git",
