--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@types/redux-logger": "^3.0.8",
     "axios": "^0.19.2",
     "formik": "^2.1.5",
+    "material-ui-popup-state": "^1.6.1",
     "moment": "^2.27.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
@@ -30,8 +31,7 @@
     "react-scripts": "^3.4.3",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
-    "redux-logger": "^3.0.6",
-    "typescript": "^3.7.5"
+    "redux-logger": "^3.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -55,6 +55,7 @@
     ]
   },
   "devDependencies": {
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "typescript": "^3.9.7"
   }
 }
