--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "client": "cd client && npm start",
     "server": "nodemon --exec ts-node --project ./tsconfig.server.json server/index.ts --watch server -e *.ts",
     "open": "code . & npm run start",
-    "start": "npm run sass && concurrently \"npm run server\" \"npm run client\" \"npm run sass:watch\"",
-    "bot": "concurrently \"tsc -w\" \"nodemon bot/build/index.js\"",
+    "start": "concurrently \"npm run server\" \"npm run client\" \"npm run sass:watch\"",
+    "bot": "nodemon --exec ts-node --project ./tsconfig.bot.json bot/index.ts --watch bot -e *.ts",
     "build": "concurrently \"tsc --project ./tsconfig.server.json\" \"tsc --project ./tsconfig.bot.json && cd client && npm run build\"",
-    "build-bot": "tsc --project ./tsconfig.bot.json",
+    "build:bot": "tsc --project ./tsconfig.bot.json",
     "copy": "cp -r bot/* ../temp/intellidnd-bot/bot",
     "cleanup": "find . -name \"*.js\" -type f -delete",
-    "test": "echo 'No test' && exit 1",
+    "test": "echo \"No test\" && exit 1",
     "start:prod": "node build/server/index.js"
   },
   "repository": {
@@ -74,7 +74,7 @@
     "concurrently": "^5.2.0",
     "ts-loader": "^8.0.1",
     "ts-node": "^8.10.2",
-    "typescript": "^3.9.7"
+    "typescript": "^4.0.2"
   },
   "keywords": [
     "dnd",
