--- a/client/package.json
+++ b/client/package.json
@@ -31,7 +31,8 @@
     "react-scripts": "^3.4.3",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "rxjs": "^6.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
