--- a/package.json
+++ b/package.json
@@ -28,13 +28,16 @@
     "compression": "^1.7.4",
     "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^2.3.2",
+    "cors": "^2.8.5",
     "discord.js": "^12.0.2",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
     "express-session": "^1.17.1",
     "lodash": "^4.17.19",
     "moment": "^2.24.0",
     "mongoose": "^5.9.18",
+    "morgan": "^1.10.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "rand-token": "^1.0.1"
