--- a/package.json
+++ b/package.json
@@ -21,16 +21,20 @@
   "license": "ISC",
   "dependencies": {
     "@tsconfig/node12": "^1.0.7",
+    "@types/redis": "^2.8.28",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.2.6",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.2.5",
     "nanoid": "^3.1.22",
     "nodemailer": "^6.5.0",
+    "rate-limit-redis": "^2.1.0",
+    "redis": "^3.1.2",
     "request-ip": "^2.1.3",
     "sequelize": "^6.6.2",
     "twilio": "^3.61.0"
@@ -42,22 +46,16 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/bcryptjs": "^2.4.2",
-    "@types/compression": "^1.7.0",
-    "@types/connect-mongodb-session": "0.0.3",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.7",
-    "@types/express-session": "^1.17.0",
+    "@types/express-rate-limit": "^5.1.1",
     "@types/jsonwebtoken": "^8.5.0",
-    "@types/lodash": "^4.14.158",
     "@types/moment": "^2.13.0",
-    "@types/mongoose": "^5.7.32",
     "@types/morgan": "^1.9.1",
     "@types/node": "^14.0.26",
-    "@types/passport": "^1.0.4",
-    "@types/passport-local": "^1.0.33",
+    "@types/rate-limit-redis": "^1.7.1",
     "@types/request-ip": "^0.0.35",
     "concurrently": "^5.2.0",
-    "ts-loader": "^8.0.1",
     "ts-node": "^8.10.2",
     "typescript": "^4.0.2"
   },
