--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "npm": "7.8.0"
   },
   "scripts": {
-    "server": "nodemon --exec ts-node src/index.ts -e ts,json",
-    "start": "nodemon --exec ts-node src/index.ts -e ts,json",
+    "server": "nodemon --exec ts-node -r tsconfig-paths/register src/index.ts -e ts,json",
+    "start": "nodemon --exec ts-node -r tsconfig-paths/register src/index.ts -e ts,json",
     "build": "tsc",
     "test": "echo \"No test\" && exit 1"
   },
@@ -56,13 +56,14 @@
     "@types/rate-limit-redis": "^1.7.1",
     "@types/request-ip": "^0.0.35",
     "concurrently": "^5.2.0",
+    "module-alias": "^2.2.2",
     "ts-node": "^8.10.2",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^4.0.2"
   },
-  "keywords": [
-    "dnd",
-    "inventory",
-    "discord",
-    "bot"
-  ]
+  "_moduleAliases": {
+    "@types": "build/types",
+    "@models": "build/models",
+    "@utils": "build/utils"
+  }
 }
