--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "typescript": "^4.0.2"
   },
   "_moduleAliases": {
+    "@root": ".",
     "@types": "build/types",
     "@models": "build/models",
     "@utils": "build/utils"
