--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.17.1",
     "express-rate-limit": "^5.2.6",
     "jsonwebtoken": "^8.5.1",
+    "luxon": "^1.27.0",
     "module-alias": "^2.2.2",
     "morgan": "^1.10.0",
     "mysql2": "^2.2.5",
