Introduce controller class object to handle requests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,12 @@
     "compilerOptions": {
         "baseUrl": "./src",
         "paths": {
+            "@lib": [
+                "lib"
+            ],
+            "@lib/*": [
+                "lib/*"
+            ],
             "@types": [
                 "types"
             ],
