--- a/package.json
+++ b/package.json
@@ -3,12 +3,8 @@
   "version": "2.0.0",
   "description": "A cross-platform application to help you manage your D&D character.",
   "main": "build/index.js",
-  "engines": {
-    "node": "v14.16.0",
-    "npm": "7.8.0"
-  },
   "scripts": {
-    "server": "nodemon --exec ts-node -r tsconfig-paths/register src/index.ts -e ts,json",
+    "watch": "tsc-watch --onSuccess \"node build/index\"",
     "start": "node build/index",
     "build": "tsc",
     "test": "echo \"No test\" && exit 1"
@@ -42,7 +38,8 @@
     "redis": "^3.1.2",
     "request-ip": "^2.1.3",
     "seedrandom": "^3.0.5",
-    "sequelize": "^6.6.2",
+    "sequelize": "^6.21.3",
+    "tsc-watch": "^5.0.3",
     "twilio": "^3.61.0"
   },
   "bugs": {
@@ -65,6 +62,6 @@
     "concurrently": "^5.2.0",
     "ts-node": "^8.10.2",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.0.2"
+    "typescript": "^4.7.4"
   }
 }
