--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "exclude": [
-        "./node_modules",
-        "./build"
+        "node_modules",
+        "build"
     ],
     "compilerOptions": {
         "baseUrl": "./src",
@@ -51,5 +51,10 @@
         "forceConsistentCasingInFileNames": true,
         "resolveJsonModule": true,
         "pretty": true
+    },
+    "watchOptions": {
+        "excludeDirectories": [
+            "build"
+        ],
     }
 }
