--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,15 +16,15 @@ jobs:
           command: |
             echo 'Pushing to $DOCKERHUB_HOST...'
             sudo docker push $DOCKERHUB_HOST/intellidnd-api:latest
-      - add_ssh_keys:
-          fingerprints:
-            - "e5:c7:32:3c:d2:5c:84:c0:44:7d:19:83:e8:21:67:64"
       - run:
-          name: Run ssh command
+          name: Run webhook
           command: |
-            echo 'Connecting to $DOCKERHOST and running script...'
-            ssh -o "StrictHostKeyChecking=no" $DOCKERHOST $REMOTE_SCRIPT_PATH
-            echo 'All done! App now deployed!'
+            curl --location --request POST '$WEBHOOK_URL' \
+            --header 'X-Webhook-Password: $WEBHOOK_PASS' \
+            --header 'Content-Type: application/json' \
+            --data-raw '{
+                "cmd": "intellidnd-api"
+            }'
 workflows:
   build:
     jobs:
