--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,21 +10,19 @@ jobs:
           command: |
             echo 'Starting build...'
             sudo docker login $DOCKERHUB_HOST -u $DOCKERHUB_USER -p $DOCKERHUB_PASSWORD
-            sudo docker build --pull --rm -f "Dockerfile" -t $DOCKERHUB_HOST/intellidnd-api:latest "."
+            sudo docker build --pull --rm -f "Dockerfile" -t $DOCKERHUB_HOST/intellidnd/intellidnd-api:latest "."
       - run:
           name: Push Docker Image
           command: |
             echo 'Pushing to $DOCKERHUB_HOST...'
-            sudo docker push $DOCKERHUB_HOST/intellidnd-api:latest
+            sudo docker push $DOCKERHUB_HOST/intellidnd/intellidnd-api:latest
       - run:
           name: Run webhook
           command: |
             curl --location --request POST $WEBHOOK_URL \
             --header 'X-Webhook-Password: '$WEBHOOK_PASS'' \
             --header 'Content-Type: application/json' \
-            --data-raw '{
-                "cmd": "intellidnd-api"
-            }'
+            --data-raw '{"container":"intellidnd-api","stack":"intellidnd"}'
 workflows:
   build:
     jobs:
